...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fl_ride_map_container"
                        android:orientation="vertical">

                        <com.rideaustin.ui.widgets.CustomRatingBar
                            android:id="@+id/rb_rate_driver"
                            style="@style/Base.Widget.AppCompat.RatingBar"
                            android:layout_width="220dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"
                            app:maxStars="5"
...
                            android:textSize="12sp"
                            android:textColor="@color/charcoalGrey"
                            android:text="@{viewModel.riderFeedbackText}"
                            tools:text="@string/rating_feedback_message_text" />

                        <EditText
                            android:id="@+id/edt_leave_comment"
                            style="@style/EditText.LeaveComment"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_horizontal"
                            android:hint="@string/hint_leave_comment"
...
                                android:layout_height="wrap_content"
                                android:checked="@={viewModel.bevoBucksChecked}"/>

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/radio_group_tips"
                            style="@style/RadioGroup.Horizontal.Blue"
                            android:layout_height="@dimen/rounded_radio_group_height"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="@dimen/rate_driver_divider_margin"
                            android:visibility="@{viewModel.shouldShowTipOption}">

                            <RadioButton
                                android:id="@+id/tips_no"
                                style="@style/RadioButton.RoundedBlueButton.Left"
                                android:onClick="@{viewModel.onTipChecked}"
                                android:text="@string/tip_no" />

                            <RadioButton
                                android:id="@+id/tips_one"
                                style="@style/RadioButton.RoundedBlueButton.Center"
                                android:onClick="@{viewModel.onTipChecked}"
                                android:text="@string/tip_one" />

                            <RadioButton
                                android:id="@+id/tips_two"
                                style="@style/RadioButton.RoundedBlueButton.Center"
                                android:onClick="@{viewModel.onTipChecked}"
                                android:text="@string/tip_two" />

                            <RadioButton
                                android:id="@+id/tips_five"
                                style="@style/RadioButton.RoundedBlueButton.Center"
                                android:onClick="@{viewModel.onTipChecked}"
                                android:text="@string/tip_five" />


                            <RadioButton
                                android:id="@+id/tips_other"
                                style="@style/RadioButton.RoundedBlueButton.Right"
                                android:onClick="@{viewModel.onTipChecked}"
                                android:text="@string/tip_other" />
                        </RadioGroup>

                        <com.rideaustin.ui.widgets.ExtendedEditText
                            android:id="@+id/custom_tip"
                            style="@style/EditText.LeaveComment"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:digits="0123456789"
                            android:minEms="4"
...
                            android:text="@{viewModel.fareString}"
                            android:textColor="@color/rate_ride_price_grey"
                            android:textSize="30sp"
                            tools:text="$ 56.50" />

                        <TextView
                            android:id="@+id/tv_ride_summary"
                            style="@style/RATextView.MontserratLight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="15dp"
...
                            android:textSize="12sp"
                            android:textColor="#6D7177"
                            android:text="@{viewModel.summaryDescription}"
                            tools:text="@string/ride_summary_description" />

                        <Button
                            android:id="@+id/btn_submit"
                            style="@style/Button.RoundedBlueButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
...
