...
    <string name="trip_history_empty_list">No trips present</string>
    <string name="trip_history_rated_driver">You rated %s</string>
    <string name="trip_history_your_driver">You driver is %s</string>
    <string name="trip_history_ride_cost">Ride Cost</string>
    <string name="trip_history_total">Total</string>

    <string name="confirm_tipping_content">Please confirm that you are tipping\n$%.2f</string>

    <string name="no_location_when_show_pricing_msg">Please enter pickup location</string>
    <string name="comment_is_long">The comment entered is too long</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="favorites">Favorite Places</string>
...
